# SteeringLLM

./: .gitignore  AGENTS.md  CONTRIBUTING.md  DEMO-FIX-PROMPT.md  DEMO-WALKTHROUGH.md  MODEL-DOWNLOAD-GUIDE.md  README.md  Skills.md  fix_tests.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  agentx-security.yml  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  docs.yml  epic.yml  feature.yml  spike.yml  story.yml
.github/agents/: agent-x.agent.md  architect.agent.md  engineer.agent.md  product-manager.agent.md  reviewer.agent.md  ux-designer.agent.md
.github/hooks/: commit-msg  pre-commit  pre-commit.ps1
.github/instructions/: api.instructions.md  csharp.instructions.md  python.instructions.md  react.instructions.md
.github/prompts/: code-review.prompt.md  refactor.prompt.md  test-gen.prompt.md
.github/scripts/: validate-handoff.sh
.github/skills/ai-systems/ai-agent-development/: SKILL.md
.github/skills/architecture/api-design/: SKILL.md
.github/skills/architecture/code-organization/: SKILL.md
.github/skills/architecture/core-principles/: SKILL.md
.github/skills/architecture/database/: SKILL.md
.github/skills/architecture/performance/: SKILL.md
.github/skills/architecture/scalability/: SKILL.md
.github/skills/architecture/security/: SKILL.md
.github/skills/development/blazor/: SKILL.md
.github/skills/development/code-review-and-audit/: SKILL.md
.github/skills/development/configuration/: SKILL.md
.github/skills/development/csharp/: SKILL.md
.github/skills/development/dependency-management/: SKILL.md
.github/skills/development/documentation/: SKILL.md
.github/skills/development/error-handling/: SKILL.md
.github/skills/development/frontend-ui/: SKILL.md
.github/skills/development/logging-monitoring/: SKILL.md
.github/skills/development/postgresql/: SKILL.md
.github/skills/development/python/: SKILL.md
.github/skills/development/react/: SKILL.md
.github/skills/development/sql-server/: SKILL.md
.github/skills/development/testing/: SKILL.md
.github/skills/development/type-safety/: SKILL.md
.github/skills/development/version-control/: SKILL.md
.github/skills/operations/remote-git-operations/: SKILL.md
.github/templates/: ADR-TEMPLATE.md  PRD-TEMPLATE.md  REVIEW-TEMPLATE.md  SPEC-TEMPLATE.md  UX-TEMPLATE.md
.github/workflows/: agent-x.yml  quality-gates.yml
.streamlit/: config.toml
demo/: app.py  launch.py  pdf_utils.py  presets.py
demo/saved_vectors/: gpt2-large_L21.json  gpt2-large_L21.pt  microsoft_phi-2_L19.json  microsoft_phi-2_L19.pt
docs/: API-REFERENCE.md  mcp-integration.md  project-setup.md
docs/examples/: azure-agent-guide.md  basic-usage-guide.md  langchain-integration-guide.md  llamaindex-rag-guide.md
docs/implementation/: FEATURE-3-SUMMARY.md  STORIES-5-6-SUMMARY.md
docs/prd/: PRD-001-steeringllm-foundation.md  PRD-12.md
examples/: README.md  azure_agent_foundry.py  langchain_steering_agent.py  llamaindex_rag_steering.py  professional_roles_demo.py
scripts/: convert-docs.ps1  convert-docs.sh  validate-frontmatter.ps1
scripts/modules/: CIHelpers.psm1  SecurityHelpers.psm1
src/steering_llm/: __init__.py
src/steering_llm/core/: __init__.py  discovery.py  steering_model.py  steering_vector.py  vector_composition.py
tests/: __init__.py  conftest.py  test_discovery.py  test_discovery_advanced.py  test_integration_gpt2.py  test_steering_model.py  test_steering_model_multi.py  test_steering_vector.py  test_vector_composition.py
