[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "steering-llm"
version = "0.1.0"
description = "Runtime LLM behavior modification through activation steering"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "SteeringLLM Contributors"}
]
keywords = ["llm", "steering", "activation", "interpretability", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0,<3.0.0",
    "transformers>=4.36.0,<5.0.0",
    "numpy>=1.24.0,<2.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
]

[project.optional-dependencies]
# Agent framework integrations (LangChain ecosystem)
langchain = [
    "langchain-core>=0.1.0,<0.3.0",
    "langchain>=0.1.0,<0.3.0",
]

# LlamaIndex integration
llamaindex = [
    "llama-index-core>=0.10.0,<0.12.0",
    "llama-index-llms-huggingface>=0.1.0,<0.3.0",
]

# Azure/Microsoft integrations  
azure = [
    "azure-monitor-opentelemetry>=1.0.0,<2.0.0",
    "opentelemetry-api>=1.20.0,<2.0.0",
]

# Evaluation and benchmarks
evaluation = [
    "datasets>=2.14.0,<3.0.0",
]

# Convenience: all agent integrations
agents = [
    "langchain-core>=0.1.0,<0.3.0",
    "langchain>=0.1.0,<0.3.0",
    "llama-index-core>=0.10.0,<0.12.0",
]

# PDF processing for RAG demo
rag = [
    "PyPDF2>=3.0.0,<4.0.0",
    "pdfplumber>=0.10.0,<1.0.0",
]

# Interactive demo UI
demo = [
    "streamlit>=1.30.0,<2.0.0",
    "pandas>=2.0.0,<3.0.0",
    "PyPDF2>=3.0.0,<4.0.0",
    "pdfplumber>=0.10.0,<1.0.0",
]

# All optional dependencies
all = [
    "langchain-core>=0.1.0,<0.3.0",
    "langchain>=0.1.0,<0.3.0",
    "llama-index-core>=0.10.0,<0.12.0",
    "llama-index-llms-huggingface>=0.1.0,<0.3.0",
    "azure-monitor-opentelemetry>=1.0.0,<2.0.0",
    "datasets>=2.14.0,<3.0.0",
    "streamlit>=1.30.0,<2.0.0",
]

dev = [
    "pytest>=7.4.0,<9.0.0",
    "pytest-cov>=4.1.0,<6.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "black>=23.0.0,<25.0.0",
    "isort>=5.12.0,<6.0.0",
    "mypy>=1.5.0,<2.0.0",
    "ruff>=0.1.0,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/jnPiyush/SteeringLLM"
Documentation = "https://github.com/jnPiyush/SteeringLLM/tree/main/docs"
Repository = "https://github.com/jnPiyush/SteeringLLM"
Issues = "https://github.com/jnPiyush/SteeringLLM/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=steering_llm",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=70",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "if not .*_AVAILABLE:",
    "except ImportError:",
]
